refactor: utils.error
