# internal/user/user_controller.go
@@ -1,12 +1,13 @@
 package user
 
 import (
-	"gin-starter/pkg/utils"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
+
+	"gin-starter/pkg/utils"
 )
 
 type UserController struct {
@@ -23,7 +24,7 @@ func NewUserController(db *gorm.DB) UserController {
 // @Summary Retrieves users
 // @Tags users
 // @Success 200	{array} User
-// @Failure 500 {object} utils.HTTPError
+// @Failure 500 {object} utils.ErrorResponse
 // @Router /admin/users [get]
 func (u *UserController) FindAll(c *gin.Context) {
 	users := u.UserService.FindAll()
@@ -35,19 +36,19 @@ func (u *UserController) FindAll(c *gin.Context) {
 // @Tags users
 // @Param id path integer true "User ID"
 // @Success 200	{object} User
-// @Failure 400 {object} utils.HTTPError
-// @Failure 404 {object} utils.HTTPError
-// @Failure 500 {object} utils.HTTPError
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 404 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
 // @Router /admin/users/{id} [get]
 func (u *UserController) FindById(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		utils.NewError(c, http.StatusBadRequest, err)
+		utils.RaiseHttpError(c, http.StatusBadRequest, err)
 	}
 
 	user, err := u.UserService.FindById(uint(id))
 	if err != nil {
-		utils.NewError(c, http.StatusNotFound, err)
+		utils.RaiseHttpError(c, http.StatusNotFound, err)
 		return
 	}
 
@@ -59,18 +60,18 @@ func (u *UserController) FindById(c *gin.Context) {
 // @Tags users
 // @Param request body CreateUserDto true "CreateUserDto"
 // @Success 201	{array} User
-// @Failure 400 {object} utils.HTTPError
-// @Failure 500 {object} utils.HTTPError
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
 // @Router /admin/users [post]
 func (u *UserController) Create(c *gin.Context) {
 	var dto CreateUserDto
 	if err := c.BindJSON(&dto); err != nil {
-		utils.NewError(c, http.StatusBadRequest, err)
+		utils.RaiseHttpError(c, http.StatusBadRequest, err)
 	}
 
 	user, err := u.UserService.Create(dto)
 	if err != nil {
-		utils.NewError(c, http.StatusInternalServerError, err)
+		utils.RaiseHttpError(c, http.StatusInternalServerError, err)
 	}
 
 	c.JSON(http.StatusCreated, user)
@@ -82,28 +83,28 @@ func (u *UserController) Create(c *gin.Context) {
 // @Param id path integer true "User ID"
 // @Param request body CreateUserDto true "UpdateUserDto"
 // @Success 200	{array} User
-// @Failure 400 {object} utils.HTTPError
-// @Failure 404 {object} utils.HTTPError
-// @Failure 500 {object} utils.HTTPError
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 404 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
 // @Router /admin/users/{id} [patch]
 func (u *UserController) Update(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		utils.NewError(c, http.StatusBadRequest, err)
+		utils.RaiseHttpError(c, http.StatusBadRequest, err)
 	}
 
 	if _, err := u.UserService.FindById(uint(id)); err != nil {
-		utils.NewError(c, http.StatusNotFound, err)
+		utils.RaiseHttpError(c, http.StatusNotFound, err)
 	}
 
 	var dto UpdateUserDto
 	if err := c.BindJSON(&dto); err != nil {
-		utils.NewError(c, http.StatusBadRequest, err)
+		utils.RaiseHttpError(c, http.StatusBadRequest, err)
 	}
 
 	user, err := u.UserService.Update(dto, uint(id))
 	if err != nil {
-		utils.NewError(c, http.StatusInternalServerError, err)
+		utils.RaiseHttpError(c, http.StatusInternalServerError, err)
 	}
 
 	c.JSON(http.StatusOK, user)
@@ -114,17 +115,17 @@ func (u *UserController) Update(c *gin.Context) {
 // @Tags users
 // @Param id path integer true "User ID"
 // @Success 200
-// @Failure 400 {object} utils.HTTPError
-// @Failure 404 {object} utils.HTTPError
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 404 {object} utils.ErrorResponse
 // @Router /admin/users/{id} [delete]
 func (u *UserController) Delete(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		utils.NewError(c, http.StatusBadRequest, err)
+		utils.RaiseHttpError(c, http.StatusBadRequest, err)
 	}
 
 	if err := u.UserService.Delete(uint(id)); err != nil {
-		utils.NewError(c, http.StatusInternalServerError, err)
+		utils.RaiseHttpError(c, http.StatusInternalServerError, err)
 	}
 
 	c.JSON(http.StatusOK, nil)
